@@ -12,7 +12,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>25</maven.compiler.release>
         <javafx.version>25</javafx.version>
+        <moduleName>sample</moduleName>
         <mainClass>com.icuxika.Launcher</mainClass>
+
+        <application.icon>${project.basedir}/src/main/resources/application.ico</application.icon>
+        <application.package.stdout.encoding>-J-Dsun.stdout.encoding=UTF-8</application.package.stdout.encoding>
+        <application.package.stderr.encoding>-J-Dsun.stderr.encoding=UTF-8</application.package.stderr.encoding>
     </properties>
 
     <dependencies>
@@ -99,22 +104,149 @@
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
-            <properties>
-                <application.package.type>msi</application.package.type>
-                <application.icon>${project.basedir}/src/main/resources/application.ico</application.icon>
-                <application.package.stdout.encoding>-J-Dsun.stdout.encoding=UTF-8</application.package.stdout.encoding>
-                <application.package.stderr.encoding>-J-Dsun.stderr.encoding=UTF-8</application.package.stderr.encoding>
-                <application.package.options/>
-                <application.package.options1>--win-dir-chooser</application.package.options1>
-                <application.package.options2>--win-menu</application.package.options2>
-                <application.package.options3>--win-menu-group</application.package.options3>
-                <application.package.options4>JavaFXSample</application.package.options4>
-                <application.package.options5>--win-per-user-install</application.package.options5>
-                <application.package.options6>--win-shortcut</application.package.options6>
-                <application.package.options7>--win-shortcut-prompt</application.package.options7>
-                <application.package.options8>--win-upgrade-uuid</application.package.options8>
-                <application.package.options9>fd5b16cf-e0a9-4ef4-abc8-73d396fecf6d</application.package.options9>
-            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>${mainClass}</mainClass>
+                                    <addClasspath>true</addClasspath>
+                                </manifest>
+                            </archive>
+                            <excludes>
+                                <exclude>module-info.class</exclude>
+                            </excludes>
+                            <outputDirectory>${project.build.directory}/jars</outputDirectory>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <id>image</id>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>jpackage</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                    <arguments>
+                                        <argument>${application.package.stdout.encoding}</argument>
+                                        <argument>${application.package.stderr.encoding}</argument>
+                                        <argument>-n</argument>
+                                        <argument>JavaFXSample</argument>
+                                        <argument>-t</argument>
+                                        <argument>app-image</argument>
+                                        <argument>-i</argument>
+                                        <argument>
+                                            ${project.build.directory}/jars
+                                        </argument>
+                                        <argument>--main-jar</argument>
+                                        <argument>${project.artifactId}-${project.version}.jar</argument>
+                                        <argument>--dest</argument>
+                                        <argument>${project.build.directory}/buildImage</argument>
+                                        <argument>--icon</argument>
+                                        <argument>${application.icon}</argument>
+                                        <argument>--app-version</argument>
+                                        <argument>${project.version}</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>-XX:+PrintCommandLineFlags</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>-XX:+UseZGC</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>-Dprism.allowhidpi=true</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
+                                        <argument>--add-launcher</argument>
+                                        <argument>AppUpdateTool=launcher/AppUpdateTool.properties</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>modular</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/jars</outputDirectory>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <id>image</id>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>jpackage</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                    <arguments>
+                                        <argument>${application.package.stdout.encoding}</argument>
+                                        <argument>${application.package.stderr.encoding}</argument>
+                                        <argument>-n</argument>
+                                        <argument>JavaFXSample</argument>
+                                        <argument>-t</argument>
+                                        <argument>app-image</argument>
+                                        <argument>-p</argument>
+                                        <argument>
+                                            ${project.build.directory}/jars
+                                        </argument>
+                                        <argument>--add-modules</argument>
+                                        <argument>
+                                            MaterialFX,com.google.gson,java.base,org.kordamp.ikonli.fluentui,org.kordamp.ikonli.javafx,org.slf4j
+                                        </argument>
+                                        <argument>-m</argument>
+                                        <argument>${moduleName}/${mainClass}</argument>
+                                        <argument>--dest</argument>
+                                        <argument>${project.build.directory}/buildImage</argument>
+                                        <argument>--icon</argument>
+                                        <argument>${application.icon}</argument>
+                                        <argument>--app-version</argument>
+                                        <argument>${project.version}</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>-XX:+PrintCommandLineFlags</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>-XX:+UseZGC</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>-Dprism.allowhidpi=true</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>--enable-native-access=${moduleName}</argument>
+                                        <argument>--add-launcher</argument>
+                                        <argument>AppUpdateTool=launcher/AppUpdateTool-Modular.properties</argument>
+                                        <argument>--jlink-options</argument>
+                                        <argument>--compress zip-9</argument>
+                                        <argument>--jlink-options</argument>
+                                        <argument>--no-header-files</argument>
+                                        <argument>--jlink-options</argument>
+                                        <argument>--no-man-pages</argument>
+                                        <argument>--jlink-options</argument>
+                                        <argument>--strip-debug</argument>
+                                        <argument>--verbose</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>jni</id>
@@ -167,70 +299,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.3.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>${mainClass}</mainClass>
-                            <addClasspath>true</addClasspath>
-                        </manifest>
-                    </archive>
-                    <excludes>
-                        <exclude>module-info.class</exclude>
-                    </excludes>
-                    <outputDirectory>${project.build.directory}/jars</outputDirectory>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>image</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>jpackage</executable>
-                            <workingDirectory>${project.basedir}</workingDirectory>
-                            <arguments>
-                                <argument>${application.package.stdout.encoding}</argument>
-                                <argument>${application.package.stderr.encoding}</argument>
-                                <argument>-n</argument>
-                                <argument>JavaFXSample</argument>
-                                <argument>-t</argument>
-                                <argument>app-image</argument>
-                                <argument>-i</argument>
-                                <argument>
-                                    ${project.build.directory}/jars
-                                </argument>
-                                <argument>--main-jar</argument>
-                                <argument>${project.artifactId}-${project.version}.jar</argument>
-                                <argument>--dest</argument>
-                                <argument>${project.build.directory}/buildImage</argument>
-                                <argument>--icon</argument>
-                                <argument>${application.icon}</argument>
-                                <argument>--app-version</argument>
-                                <argument>${project.version}</argument>
-                                <argument>--java-options</argument>
-                                <argument>-XX:+PrintCommandLineFlags</argument>
-                                <argument>--java-options</argument>
-                                <argument>-XX:+UseZGC</argument>
-                                <argument>--java-options</argument>
-                                <argument>-Dprism.allowhidpi=true</argument>
-                                <argument>--java-options</argument>
-                                <argument>--enable-native-access=ALL-UNNAMED</argument>
-                                <argument>--add-launcher</argument>
-                                <argument>AppUpdateTool=launcher/AppUpdateTool.properties</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+
         </plugins>
     </build>
 </project>
